--- a/gb/20/9/30/n12443176.md
+++ b/gb/20/9/30/n12443176.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qhmibe3080/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qhmibe3080/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qhmibe3080/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qhmibe3080/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qhmibe3080/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qhmibe3080/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qhmibe3080/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qhmibe3080/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qhmibe3080/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qhmibe3080/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qhmibe3080/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qhmibe3080/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qhmibe3080/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qhmibe3080/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qhmibe3080/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>走过磨难传真相 旅德华人女医生中秋感恩</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_0649-600x400.jpeg" />
 <h6>目前生活在德国南部的朱利向师父李洪志先生恭祝中秋快乐。（受访者提供）
 </h6>
 <hr>
 	<p>【大纪元2020年10月01日讯】（大纪元记者祝兰德国报导）在德国已经度过了至少10个中秋节，每逢佳节倍思亲，每到这个时候，朱利就特别想念国内的亲人和曾经患难与共的同修。如今她在德国南部斯图加特（Stuttgart）近郊的小镇享受着平静美满的生活，十多年前在国内经受的磨难时不时还会出现在脑海中。</p>
-<p>值此中秋佳节，她首先想到的感谢<ahref="https://github.com/qhmibe3080/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%B8%88%E7%88%B6.md#1">李洪志师父</a>，使她通过在法轮大法中的修炼，能够走过艰难岁月，始终以积极正面的态度面对人生。她衷心恭祝师父中秋节快乐，希望所有的大法弟子都能够更精进，也希望在国内的大法弟子能够少受迫害，祝愿所有正在魔难中的大法弟子能够早日与家人团圆。</p>
+<p>值此中秋佳节，她首先想到的感谢<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%B8%88%E7%88%B6.md#1">李洪志师父</a>，使她通过在法轮大法中的修炼，能够走过艰难岁月，始终以积极正面的态度面对人生。她衷心恭祝师父中秋节快乐，希望所有的大法弟子都能够更精进，也希望在国内的大法弟子能够少受迫害，祝愿所有正在魔难中的大法弟子能够早日与家人团圆。</p>
 <p>平日里，朱利除了照料相濡以沫的德国丈夫，打理家务，空余时间她经常去周边城市参加法轮功的活动，她想让更多人知道这个功法的美好，更希望人们了解中共对法轮功的迫害，因为她本人就是一个例子。</p>
-<figure id="attachment_12443196" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/signal-2020-07-12-192736.jpeg"><img class="size-large wp-image-12443196" src="https://i.epochtimes.com/assets/uploads/2020/10/signal-2020-07-12-192736-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">朱利尽量利用业余时间去德国各地参加法轮大法的庆祝，广<ahref="https://github.com/qhmibe3080/djy/blob/master/gb/tag/%E4%BC%A0%E7%9C%9F%E7%9B%B8.md#1">传真相</a>。（受访者提供）</figcaption></figure>
+<figure id="attachment_12443196" aria-describedby="caption-attachment-12443196" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/signal-2020-07-12-192736.jpeg"><img class="size-large wp-image-12443196" src="https://i.epochtimes.com/assets/uploads/2020/10/signal-2020-07-12-192736-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-12443196" class="wp-caption-text">朱利尽量利用业余时间去德国各地参加法轮大法的庆祝，广<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%A0%E7%9C%9F%E7%9B%B8.md#1">传真相</a>。（受访者提供）</figcaption></figure>
 <h2>为法轮功鸣冤 两次被劳教</h2>
 <p>朱利来自四川成都，毕业后在家乡一所医院口腔科当医生。她看到父母修炼法轮功的变化，自己也走入修炼。她母亲原本患有胆结石、严重精神衰弱、妇科病等病症，练许多气功都没好，而炼法轮功不到一年，这些疾病都没有了。父亲炼功之后，严重风湿、关节炎都得到很大改善。</p>
 <p>朱利觉得大法很神奇，不管从哪个角度讲都很好，对人生也有指导意义。修炼法轮功以后，知道这部法不仅能让人获得健康，还能让人返本归真。她努力按照法轮大法“真、善、忍”的原则为人处事，时时提醒自己为他人着想，做一个好人，一个更好的人，一个高尚的人。</p>
@@ -18,7 +18,7 @@
 <p>到2001年1月，她才被放出来。这期间，中共的株连政策迫使丈夫跟她离婚了。医院也怕受牵连，违约解雇了她。</p>
 <p>这些并没有动摇朱利修炼的信念，当时中共炮制天安门自焚伪案，欺骗全国老百姓，煽动仇恨。朱利就与其他人一起印制资料，揭露中共的骗局。这成了她的罪名，她再被抓，被判劳教三年。</p>
 <h2>在劳教所做奴工 30岁头发全白</h2>
-<p>作为一名受过高等教育、以救死扶伤为宗旨、受人尊敬的<ahref="https://github.com/qhmibe3080/djy/blob/master/gb/tag/%E5%A5%B3%E5%8C%BB%E7%94%9F.md#1">女医生</a>，她在劳教所却遭受了身体上和精神上的双重折磨和摧残。</p>
+<p>作为一名受过高等教育、以救死扶伤为宗旨、受人尊敬的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%B3%E5%8C%BB%E7%94%9F.md#1">女医生</a>，她在劳教所却遭受了身体上和精神上的双重折磨和摧残。</p>
 <p>在女子劳教所里，她被迫做奴工，一天工作16个小时，赶任务时经常通宵达旦。她多数做的是用于外贸出口的钩花，还有比如钩灯丝、钩花、糊纸盒子等。同时，她们还经常被强迫洗脑，如强迫她们读曲解法轮功的书籍，她们不读，就会把她们集中起来，让别人读，强迫她们听，逼迫她们放弃信仰。</p>
 <p>另外还有各种肉体折磨，比如她被用痰盂或者刷马桶的脏水泼一身，然后被扔到只有铁门和铁窗小监里。冬天开着铁窗让她挨冻，还不许她上厕所。这就是所谓的关小监。</p>
 <p>更多的酷刑包括电棍、坐小板凳、被拽着头发在操场上拖，或者从楼梯下拖到楼上，或反过来拖。她经常被电棍电得皮肤焦黑。她曾绝食抗议，结果被野蛮灌食，四颗门牙都被弄活动了。三年下来，她几乎头发全都白了，那时她才30岁左右。</p>
@@ -45,42 +45,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/24/n12427792.md#1">中秋节：拜月赏月吃月饼 风俗源起各不同</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/25/n12430051.md#1">浓情中秋 前大陆讲师感恩李洪志大师（下）</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/27/n12433671.md#1">石铭：天上月儿圆 人间团圆难</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/28/n12437733.md#1">德大企业态度转向 西门子总裁罕见批评中共</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/24/n12427792.md#1">中秋节：拜月赏月吃月饼 风俗源起各不同</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/25/n12430051.md#1">浓情中秋 前大陆讲师感恩李洪志大师（下）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/27/n12433671.md#1">石铭：天上月儿圆 人间团圆难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/28/n12437733.md#1">德大企业态度转向 西门子总裁罕见批评中共</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/8/n10200300.md#1" target="_blank">共产暴政录：12岁孩子告密父亲成“英雄”</a></li><li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581061.md#1" target="_blank">法轮功义务传功遍全球 事实亲历揭穿中共诽谤</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/14/n11656265.md#1" target="_blank">杨宁：东德国防部长之选择给中共军方的启示</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/22/n11674273.md#1" target="_blank">身心俱悴时喜遇大法 印度母亲人生现转机</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/8/n12388919.md#1">灵魂在阴间受刑？古籍记载人身病痛另有缘由</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/7/30/n12294991.md#1">【成吉思汗】降生草原 绝境中成长</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/2/1/5/n161846.md#1">梦溪笔谈中的神秘现象（上）</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/18/n12412719.md#1">六种复古的见面问候方式</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/30/n12442082.md#1">【重播】美众院：对抗中共 必须果断行动</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/29/n12440284.md#1">【新闻看点】蓬佩奥王毅轮流转 欧亚须选择</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/29/n12438105.md#1">【十字路口】川普与拜登 中共最怕谁当选？</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/28/n12436107.md#1">赵立坚炫新四大发明闹笑话 被讽“五毛水平”</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/28/n12437445.md#1">【薇羽看世间】一代奸相周恩来（下）</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/26/n12433285.md#1">【大选观察】拿下必赢？看预测最准的摇摆州</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/27/n12434488.md#1">刘德华迎59岁生日 刘嘉玲晒合照显交情</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/29/n12439951.md#1">黄晓明北京豪宅三度遭查封 买入七年没过户</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/27/n12434593.md#1">唐嫣首曝女儿超甜小名 赞6个月大却超有主见</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/28/n12437628.md#1">赵薇称女性捍卫家庭过时 被疑与黄有龙婚变</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/29/n12440388.md#1">吴秀波抛售美国豪宅 亏本甩卖仍无人问津</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/29/n12439136.md#1">广东山寨日本“一番街” 被评有空壳没文化</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/29/n12438361.md#1">臂章秀红色中国 美军MQ-9无人机瞄准中共？</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/28/n12436111.md#1">竹内结子疑产后忧郁轻生 检测逾10分建议就医</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/28/n12437013.md#1">肾脏病吃太多蛋白质有害 饮食注意2件事</a></li>
-<li><a href="https://github.com/qhmibe3080/djy/blob/master/gb/20/9/28/n12436412.md#1">煮这一锅省下煮好几道菜！2款简易西式炖肉作法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qhmibe3080/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qhmibe3080/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/30/n12443176.htm">走过磨难传真相 旅德华人女医生中秋感恩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/30/n12443176.htm">走过磨难传真相 旅德华人女医生中秋感恩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qhmibe3080/djy/blob/master/gb/20/9/30/n12443176.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qhmibe3080/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qhmibe3080/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qhmibe3080/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qhmibe3080/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qhmibe3080/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/9/30/n12443176.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
